data/style.css
.rounded {
  border-radius: 20px;
}

.small-pill {
  border-radius: 60px;
}

.card-image {
  border-radius: 10px;
}

.small-image {
  border-radius: 4px;
}

.card-bg {
  transition: opacity, background-color 0.15s ease-in-out;
  border-radius: 14px;
  border: 1px solid transparent;
}

.card-bg:hover {
  background-color: alpha(var(--window-fg-color), 0.1);
}

.play-overlay {
  background: none;
  border: none;
  box-shadow: none;
  padding: 0;
  min-width: 0;
  min-height: 0;
}

.play-overlay image {
  color: white;
}

.card-play-overlay image {
  -gtk-icon-size: 50px;
}

.tracks-list-box .play-overlay image {
  opacity: 0;
  -gtk-icon-size: 25px;
  transition: opacity 0.3s ease-in-out;
}

.tracks-list-box row:hover .play-overlay image,
.tracks-list-box row.playing-track .play-overlay image {
  opacity: 1;
}

.artist-link {
  color: #888;
}

.link-text {
  color: #888;
  text-decoration: none;
  transition: color 0.3s ease-in-out;
  background-color: transparent;
  font-weight: normal;
}

.link-text:hover {
  color: #444;
}

.card-label {
  padding: 6px;
}

.artist-initials-box {
    border-radius: 12px;
    background-color: alpha(@accent_color, 0.3);
}

.artist-initials-label {
    font-size: 48px;
    font-weight: bold;
    color: @accent_color;
}

.artist-button {
  padding: 0px;
}

.play-btn {
  padding-left: 18px;
  padding-right: 18px;
  padding-top: 8px;
  padding-bottom: 8px;
}

.artist-picture {
  border-radius: 100px;
}

.default-image-box {
    border-radius: 12px;
}

.circular-image {
    border-radius: 50%;
}

.track-picture {
  border-radius: 12px;
}

.explicit-label-small {
  padding: 0px;
  padding-left: 4px;
  padding-right: 4px;
  background-color: var(--popover-shade-color);
  border: 1px solid #fff;
  border-radius: 4px;
}

.explicit-label {
  padding: 0px;
  padding-left: 8px;
  padding-right: 8px;
  background-color: var(--popover-shade-color);
  border: 1px solid #fff;
  border-radius: 6px;
  transition-property: color, background-color;
  transition-duration: 0.5s;
  transition-timing-function: ease-out;
}

.explicit-label:hover {
  color: #1e1e22;
  background-color: #fff;
}

.lyrics-widget {
  background-color: transparent;
}

.lyrics-widget>row {
  background-color: transparent;
  padding: 0px;
}

.lyrics-widget>row label {
  transition: background-color 0.1s ease-in-out;
  font-weight: bold;
  font-size: 14pt;
  color: alpha(var(--view-fg-color), 0.5);
  border-radius: 12px;
  padding: 6px;
}

.lyrics-widget>row label:hover {
  background-color: alpha(var(--view-fg-color), 0.04);
}

.lyrics-widget>row:selected label {
  background-color: alpha(var(--view-fg-color), 0.07);
  color: var(--accent-color);
  padding-top: 24px;
  padding-bottom: 24px;
}

.lyrics-widget>row:selected:hover {
  color: alpha(var(--accent-color), 0.9);
}

.tracks-list-box {
  border-radius: 12px;
  background-color: transparent;
}

.tracks-list-box row {
  border-radius: 12px;
  transition: background-color 0.1s ease-in-out;
}

.tracks-list-box row:nth-child(odd) {
  background-color: alpha(var(--window-fg-color), 0.05);
  border: 1px solid alpha(var(--window-fg-color), 0.05);
}
.tracks-list-box row:nth-child(even) {
  background-color: alpha(var(--window-fg-color), 0.10);
  border: 1px solid alpha(var(--window-fg-color), 0.10);
}

.tracks-list-box row:nth-child(odd):hover {
  background-color: alpha(var(--window-fg-color), 0.12);
}
.tracks-list-box row:nth-child(even):hover {
  background-color: alpha(var(--window-fg-color), 0.17);
}

.tracks-list-box row.playing-track:nth-child(odd),
.tracks-list-box row.playing-track:nth-child(even) {
    background-color: alpha(@accent_color, 0.15);
    border: 1px solid @accent_color;
}
.tracks-list-box row.playing-track:nth-child(odd):hover,
.tracks-list-box row.playing-track:nth-child(even):hover {
    background-color: alpha(@accent_color, 0.22);
}

.tracks-list-box row.playing-track .play-overlay image {
    color: @accent_color;
    opacity: 1;
}

.track-progress-overlay {
    background-color: alpha(@accent_color, 0.08);
}

.playing-card {
    background-color: alpha(@accent_color, 0.15);
    border: 1px solid @accent_color;
}

.playing-card:hover {
    background-color: alpha(@accent_color, 0.22);
}

.draggable-box row.drop-target-above {
  border-top: 2px solid var(--accent-color);
}
.draggable-box row.drop-target-below {
  border-bottom: 2px solid var(--accent-color);
}

.quality-label {
  background-color: var(--popover-shade-color);
  border-radius: 4px;
  padding: 3px;
  padding-left: 6px;
  padding-right: 6px;
}

.sidebar-progress-bar trough { /* codespell:ignore trough */
  border-radius:0px;
  background-color: transparent;
}

.sidebar-progress-bar trough > progress { /* codespell:ignore trough */
  border-radius:0px;
  background-color:alpha(var(--window-fg-color), 0.05);
}

dropdown button:not(:hover) {
  background-color: transparent;
}

